<resources>
    <string name="app_name">PlayTask</string>
    <string name="Hello_world">Hello world</string>
    <string name="hello_android">你好Android</string>
    <string name="Hello">Hello</string>
    <string name="JNU">JNU</string>
    <string name="change">change text</string>
    <string name="switchToNextActivity">switchToNextActivity</string>
    <string name="assignment">assignment :</string>
    <string name="image_view_book_cover">image_view_book_cover</string>
    <string name="ok">OK</string>
    <string name="project">Project</string>
    <string name="Return">return</string>
    <string name="add">Add</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="score">score</string>
    <string name="initial_value">0</string>
    <string name="task">任务</string>
    <string name="reward">奖励</string>
    <string name="statistics">统计</string>
    <string name="main">我的</string>
    <string name="done">done</string>
</resources>